delete some unnecessary files

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="shortcut icon" href="/portfolio.png" type="image/x-icon" />
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>ExPortfolio</title>
 
 </head>
